test/pass/mod2.sest

module Mod2 = struct

  module Counter = struct
    type t = int
    let initial() : t = 0
    let increment(c : t) : t =
      c + 1
  end

  let main() =
    let x = Counter.initial() in
    Counter.increment(x) == 0

end
