test/fail/error_cyclic_bar.sest
require "./error_cyclic_foo.sest"

module ErrorCyclicBar = struct
  let main() = ()
end
